<resources>
    <string name="app_name">医疗小助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="setting_about_description">健康随身带，成电伴你行</string>
    <string name="Title0">急救方法： </string>
    <string name="Title1">症状描述： </string>
    <string name="Title2">生活预防： </string>
    <string name="jzText0">颈椎病的临床症状较为复杂。主要有颈背疼痛、上肢无力、手指发麻、下肢乏力、行走困难、头晕、恶心、呕吐，甚至视物模糊,心动过速及吞咽困难等。颈椎病的临床症状与病变部位、组织受累程度及个体差异有一定关系</string>
	<string name="jzText1">1. 合理用枕：合适的枕头对治疗和预防颈椎病十分重要，是药物治疗所不能替代的，应长期坚持应用。枕头高度应以本人拳头一拳高(约6至7厘米)为宜。此外，枕头应有适当的弹性或可塑性，不要过硬，以木棉或谷物皮壳枕较好，应用后可以形成马鞍形。</string>
	<string name="jzText2">2. 注意颈部保暖：颈部受寒冷刺激会使肌肉血管痉挛，加重颈部板滞疼痛。在秋冬季节，最好穿高领衣服;天气稍热，夜间睡眠时应注意防止颈肩部受凉;炎热季节，空调温度不能太低。</string>
	<string name="jzText3">3. 姿势正确：最佳的学习或伏案工作姿势是颈部保持正直，微微地前倾，不要扭转、倾斜;工作时间超过1小时应该休息几分钟，做些颈部运动或按摩;不宜头靠在床头或沙发扶手上看书、看电视等。</string>
	<string name="guzhizengshengText0">本病起病缓慢，无全身症状，多为50岁以上的中老年。常为多关节发病，也有单关节发病者。受累关节可有持续性隐痛，活动增加时加重，休息后好转与气候变化有关。有时可有急性疼痛发作，同时有关节僵硬感，偶尔可发现关节内有磨擦音。后期关节肿胀、增大及运动受限，很少完全强直，一般表现为骨阻滞征</string>
	<string name="guzhizengshengText1">1. 避免长期剧烈运动。长期过度的运动是诱发骨质增生的原因之一。长期剧烈的运动可使骨骼及周围软组织受力不均、负荷过重，从而导致骨质增生。</string>
	<string name="guzhizengshengText2">2. 适当进行体育锻炼，避免长期剧烈的运动，并不是不需要运动，恰恰相反，适当的体育锻炼是预防骨质增生的上佳方法。因为关节软骨的营养来自关节液，而关节液只有靠“挤压”才能够进入软骨，促使骨骼的新陈代谢。适当的运动，特别是关节的必要运动，可增加关节腔内的压力，有利于关节液间软骨的渗透，减轻关节软骨的退行性改变，从而减轻或预防骨质增生。</string>
	<string name="guguanjieyanText0">主要症状为关节疼痛，常发生于晨间，活动后疼痛反而减轻，但如活动过多，疼痛又可加重。另一症状是关节僵硬，常出现在早晨起床时或白天关节长时间保持一定体位后。检查受累关节可见关节肿胀、压痛，活动时有摩擦感或“咔嗒”声，病情严重者可有肌肉萎缩及关节畸形。</string>
	<string name="guguanjieyanText1">1. 增加局部血液循环、减轻炎症反应，包括热疗、水疗、超声波、针灸、按摩、牵引、经皮神经电刺激(TENS)等。</string>
	<string name="guguanjieyanText2">2. 自我行为疗法(减少不合理的运动，适量活动，避免不良姿势，避免长时间跑、跳、蹲，减少或避免爬楼梯)，减肥，有氧锻炼(如游泳、自行车等)，关节功能训练(如膝关节在非负重位下屈伸活动，以保持关节最大活动度)，肌力训练(如髋关节OA应注意外展肌群的训练)等</string>
	<string name="guguanjieyanText3">3. 主要减少受累关节负重，可采用手杖、拐杖、助行器等。</string>
	<string name="guzhishusongText0">骨质疏松（osteoporosis）系指每个单位内骨组织数量减少,骨骼的生长和发育起自胚胎时期，并持续到出生后20多年。成年人骨骼的数量不再发生变化,但骨的代谢却持续不休。年龄超过40岁后骨的生成保持不变,但骨的吸收却增加，数十年后骨组织数量仅及30岁时的一半量。一旦骨的密度降低至难以忍受日常生活中所受的应力,便会发生病理性骨折。</string>
	<string name="guzhishusongText1">1. 一级预防：应从儿童、青少年做起，如注意合理膳食营养，多食用含Ca、P高的食品，如鱼、虾、虾皮、海带，坚持科学的生活方式，如坚持体育锻炼。</string>
	<string name="guzhishusongText2">2. 二级预防：人到中年，尤其妇女绝经后，骨丢失量加速进行。此时期应每年进行一次骨密度检查，对快速骨量减少的人群，应及早采取防治对策。</string>
	<string name="guzhishusongText3">3. 三级预防：对退行性骨质疏松症患者应积极进行抑制骨吸收（雌激素、CT、Ca），促进骨形成（活性Vit D）的药物治疗，还应加强防摔、防碰、防绊、防颠等措施</string>
	<string name="guguhuaisiText0">初期是髋骨根部前后疼痛，尤其是大腿根部内侧疼痛为其特点。开始是间痛，以后是持续性疼痛，活动增多时疼痛加重，休息后缓解。其二是髋关节活动功能障碍。如伸、屈、外展、内收、旋转等。不能搭上“二郎腿”，盘不上腿，继而走路出现跛行，大腿肌肉萎缩，不能下蹲等症状</string>
	<string name="guguhuaisiText1">1. 饮食上应做到：不吃辣椒，不过量饮酒，不吃激素类药物，注意增加钙的摄人量，食用新鲜蔬菜和水果，多晒太阳，防止负重，经常活动等对股骨头坏死均有预防作用。</string>
	<string name="guguhuaisiText2">2. 由于相关疾病必须应用激素时，要掌握短期适量的原则，并配合扩血管药、维生素D、钙剂等，切勿不听医嘱自作主张，滥用激素类药物。</string>
	<string name="guguhuaisiText3">3. 对股骨颈骨折采用坚强内固定，同时应用带血管蒂骨瓣头植骨，促进股骨颈愈合，增加头部血运，防止骨坏死，术后应定期随访，适当口服促进血运的中药和钙剂，预防股骨头缺血性的发生。</string>
	<string name="zhuijianpanText0">主要是因为腰椎间盘各部分（髓核、纤维环及软骨板），尤其是髓核，有不同程度的退行性改变后，在外力因素的作用下，椎间盘的纤维环破裂，髓核组织从破裂之处突出（或脱出）于后方或椎管内，导致相邻脊神经根遭受刺激或压迫，从而产生腰部疼痛，一侧下肢或双下肢麻木、疼痛等一系列临床症状。腰椎间盘突出症以腰4-5、腰5-骶1发病率最高，约占95%。</string>
	<string name="zhuijianpanText1">1. 对腰椎间盘突出症的病人的护理包括以下几个要点： 急性期应睡硬板床，绝对卧床3周。避免咳嗽、打喷嚏，防止便秘。症状明显好转后，可逐步进行背肌锻炼，并在腰围保护下，下地做轻微活动</string>
	<string name="zhuijianpanText2">2. 预防腰椎间盘突出症复发 :腰椎间盘突出症患者经过治疗和休息后，可使病情缓解或痊愈，但该病的复发率相当高，特别是在寒冷、潮湿季节未注意保暖，风寒湿邪侵袭人体的患病部位，加之劳累容易诱发本病的复发</string>
	<string name="yaojilaosunText0">慢性腰肌劳损,为临床常见病，多发病，发病因素较多,主要症状是腰部酸痛，日间劳累加重，休息后可减轻,日积月累，可使肌纤维变性，甚而少量撕裂,形成疤痕或纤维索条或粘连，遗留长期慢性腰背痛。治疗上以非手术治疗为主,如各种非手术疗法无效者，可施行手术治疗。</string>
	<string name="yaojilaosunText1">1. 要加强锻炼 ,提高身体素质。特别是长年坐着的人 ,腰背肌肉比较薄弱 ,容易损伤。因此 ,应有目的地加强腰背肌肉的锻炼 ,如做一些的屈、后伸、左右腰部侧弯、回旋以及仰卧、起坐的动作 ,使腰部肌肉发达有力 ,韧带坚强 ,关节灵活 ,减少生病的机会。肥胖者应减肥 ,以减轻腰部的负担。</string>
	<string name="yaojilaosunText2">2. 注意生活中的各种姿势 ,如从地上提取重物时 ,应屈膝下蹲 ,避免弯腰加重负担 拿重物时 ,身体尽可能靠近物体 ,并使其贴近腹部 ,两腿微微下蹲 向高处取放东西时 ,够不着不宜勉强</string>
	<string name="yaojilaosunText3">3. 睡眠时应保持脊柱的弯曲等。避免潮湿和受寒也是很重要的。</string>
	<string name="tongfengText0">痛风(gout)是尿酸过量生产或尿酸排泻不充分引起的尿酸堆积造成的,尿酸结晶堆积在软骨，软组织，肾脏以及关节处,在关节处的沉积会造成剧烈的疼痛。</string>
	<string name="tongfengText1">1. 多饮水少喝汤血尿酸偏高者和痛风患者要多喝白开水少喝肉汤鱼汤鸡汤火锅汤等白开水的渗透压最有利于溶解体内各种有害物质多饮白开水可以稀释尿酸加速排泄使尿酸水平下降汤中含有大量嘌呤成分饮后不但不能稀释尿酸反而导致尿酸增高</string>
	<string name="tongfengText2">2. 多吃蔬菜少吃饭多吃菜有利于减少嘌呤摄入量增加维生素C增加纤维素少吃饭有利于控制热量摄入限制体重减肥降脂 </string>
	<string name="tongfengText3">3. 多吃碱性食物少吃酸性食物痛风患者本身有嘌呤代谢紊乱尿酸异常如果过多吃酸性食品会加重病情不利于康复而多吃碱性食物能帮助补充钾钠氯离子维持酸碱平衡</string>
	<string name="leifengshiText0">类风湿性关节炎(rheumatoid arthritis)是一种以关节滑膜炎为特征的慢性全身性自身免疫性自身免疫性疾病,滑膜炎持久反复发作，可导致关节内软骨和骨的破坏，关节功能障碍,甚至残废。血管炎病变累及全身各个器官，故本病又称为类风湿病</string>
	<string name="leifengshiText1">1. 类风湿关节炎病情时好时坏，目前并无根治方法只能控制暂时病况，所以在饮食和生活上就要特别注意保健，饮食上应选择容易消化的食物,多吃开胃的食物如大枣,尽可能的减少脂肪的摄取</string>
	<string name="leifengshiText2">2. 减少长时间卧床时间，运动时不宜剧烈。若采坐姿，可将右腿打直、小腿与足部往上提,离地三十公分以上,持续五秒钟后放下,左脚也以相同动作重复，每日可多作几次,以能负荷为原则</string>
	<string name="leifengshiText3">3. 冬季清晨起床时要注意保温，可以做些暖身运动。动作如下：将双手向前伸直，手掌向下,往下、往后作伸展划水的动作，或者将双手举高至脸部，掌心朝向脸部，吸气后，双手向上、向外伸展，然后再缓缓放下</string>
	<string name="xiaochuanText0">支气管哮喘(bronchial asthma,哮喘)是由多种细胞特别是肥大细胞、嗜酸性粒细胞和T淋巴细胞参与的慢性气道炎症，在易感者中此种炎症可引起反复发作的喘息,气促、胸闷和(或)咳嗽等症状，多在夜间和(或)凌晨发生,气道对多种刺激因子反应性增高。但症状可自行或经治疗缓解。</string>
	<string name="xiaochuanText1">1. 在明确过敏原后应避免与其再接触。例如：如是由于室内尘埃或螨诱发哮喘的发作，就应保持室内的清洁，勤晒被褥，而且应常开窗户通风，保持室内空气的清新。</string>
	<string name="xiaochuanText2">2. 平时应注意孩子的体格锻炼，如常用冷水洗浴、干毛巾擦身等进行皮肤锻炼，以便肺、气管、支气管的迷走神经的紧张状态得到缓和。 </string>
	<string name="xiaochuanText3">3. 加强营养，避免精神刺激，避免感冒和过度疲劳等对预防哮喘的发作也有着重要的作用。</string>
	<string name="zhiqiguanyanText0">慢性支气管炎（chronic bronchitis）是由于感染或非感染因素引起气管,支气管粘膜及其周围组织的慢性非特异性炎症。其病理特点是支气管腺体增生、粘液分泌增多,临床出现有连续两年以上，每持续三个月以上的咳嗽、咳痰或气喘等症状,早期症状轻微，多在冬季发作，春暖后缓解；晚期炎症加重,症状长年存在，不分季节</string>
	<string name="zhiqiguanyanText1">1. 加强锻炼，增强体质，提高免疫功能。</string>
	<string name="zhiqiguanyanText2">2. 加强个人卫生，避免各种诱发因素的接触和吸入。 </string>
	<string name="zhiqiguanyanText3">3. 耐寒锻炼能预防感冒，戒烟。 </string>
	<string name="feijieheText0">结核病是由结核分枝杆菌引起的慢性传染病,可侵及许多脏器，以肺部受累形成肺结核(pulrnonary tuberculosis)最为常见,排菌患者为其重要的传染源。人体感染结核菌后不一定发病，当抵抗力降低或细胞介导的变态反应增高时,才可能引起临床发病。本病的基本病理特征为渗出、干酪样坏死及其他增殖性组织反应,可形成空洞。除少数起病急聚外，临床上多呈慢性过程,表现为低热、消瘦,乏力等全身症状与咳嗽、咯血等呼吸系统表现,若能及时诊断，并予合理治疗，大多可获临床痊愈</string>
	<string name="feijieheText1">1. 平衡饮食，加强体育锻炼，增强体质。新生儿及时接种卡介苗。对15岁以下儿童接触者，作结素试验，反应强阳性者20mm以上，考虑预防性服用异烟肼3-6个月</string>
	<string name="feijieheText2">2. 当家中出现传染性强的排菌肺结核病人时，要弄清楚家庭其他成员是否也感染上结核菌。家庭中其他成员应及时到结核病防治机构检查，以便早发现，早治疗。尤其是老人、儿童机体抵抗力较低，容易感染上结核病</string>
	<string name="yanhouyanText0">咽喉炎，是由细菌引起的一种疾病，可分为急性咽喉炎和慢性咽喉炎两种。咽喉炎，是由细菌引起的一种疾病，可分为急性咽喉炎和慢性咽喉炎两种。</string>
	<string name="yanhouyanText1">1. 不要吸烟烟雾中的有害物质对咽喉部是恶性刺激，损害咽腔黏膜而导致免疫力下降，引发炎症</string>
	<string name="yanhouyanText2">2. 避免粉尘改善工作环境，加强自我保健，擦拭黑板时从上而下，动作尽量轻一些，减少粉尘飞扬。平时不去空气浑浊、污染较严重的地方，避免吸入过多的灰尘或微生物，必要时要戴上口罩。</string>
	<string name="yanhouyanText3">3. 护好口腔坚持做到饭后漱口，晨起和晚睡前刷牙，口腔卫生清洁，可保咽喉远离炎症侵害。不要过度用嗓子，女教师月经期不要过度用嗓，不能引吭高歌，以免气流猛烈地震动声带，导致声带疲劳或损伤</string>
	<string name="feiqizhongText0">肺气肿是指终末细支气管远端(呼吸细支气管,肺泡管、肺泡囊和肺泡)的气道弹性减退，过度膨胀,充气和肺容积增大或同时伴有气道壁破坏的病理状态。按其发病原因肺气肿有如下几种类型：老年性肺气肿，代偿性肺气肿,间质性肺气肿，灶性肺气肿，旁间隔性肺气肿,阻塞性肺气肿</string>
	<string name="feiqizhongText1">1. 首先是戒烟。 　　</string>
	<string name="feiqizhongText2">2. 注意保暖，避免受凉，预防感冒。 　 　　</string>
	<string name="feiqizhongText3">3. 改善环境卫生，做好个人劳动保护，消除及避免烟雾、粉尘和刺激性气体对呼吸道的影响。</string>
	<string name="weiyanText0">慢性胃炎(chronic gestritis)系指不同病因引起的胃粘膜的慢性炎症或萎缩性病变,其实质是胃粘膜上皮遭受反复损害后，由于粘膜特异的再生能力，以致粘膜发生改建,且最终导致不可逆的固有胃腺体的萎缩，甚至消失。本病十分常见,约占接受胃镜检查病人的80～90%，男性多于女性，随年龄增长发病率逐渐增高</string>
	<string name="weiyanText1">1. 主要是增加机体抵抗力，锻炼能够适应环境改变的能力,搞好生活管理，注意饮食卫生，保证身体健康</string>
	<string name="weiyanText2">2. 避免或减少对胃刺激性过大的食物</string>
	<string name="weiyanText3">3. 及时、妥善地处理急性胃炎,去除体内的感染病灶(口、鼻、咽喉)。</string>
	<string name="xiaohuaText0">功能性消化不良（fuctional dyspepsia,FD），也称为非溃疡性消化不良（ non-ulcer dyspepsia，NUD）,是指一组无器质性原因可究的，慢性持续性或反复发作性中上腹症候群。</string>
	<string name="xiaohuaText1">1. 进餐时应保持轻松的心情，不要匆促进食，也不要囫囵吞食，更不要站着或边走边食,不要泡饭或和水进食，饭前或饭后不要马上大量饮用液体</string>
	<string name="xiaohuaText2">2. 不要在进餐时饮酒、进餐后不要马上吸烟。不要穿着束紧腰部的衣裤就餐,避免大吃大喝，尤其是辛辣和富含脂肪的饮食</string>
	<string name="xiaohuaText3">3. 有条件可在两餐之间喝一杯牛奶，避免胃酸过多,少食过甜过咸食品，过多吃糖果会刺激胃酸分泌,进食不要过冷或过烫</string>
	<string name="jiechangyanText0">溃疡性结肠炎是一种原因不明的慢性结肠炎,病变主要限于结肠的粘膜，表现为炎症或溃疡，多累及直肠和远端结肠,但可向近端扩展，以至遍及整个结肠</string>
	<string name="jiechangyanText1">1. 避免受凉，控制情绪外，饮食是一个非常重要的方面。本病在发作期、缓解期不能进食豆类及豆制品，麦类及面制品，以及大蒜、韭菜、洋山芋、皮蛋、卷心菜、花生、瓜子等易产气食物。因为一旦进食，胃肠道内气体增多，胃肠动力受到影响，即可诱发本病，甚至加剧症状。</string>
	<string name="jiechangyanText2">2. 柿子、石榴、苹果都含有鞣酸及果胶成分，均有收敛止泻作用，慢性结肠炎可适量食用</string>
	<string name="jiechangyanText3">3. 患者平常应加强锻炼，如打太极拳，以强腰壮肾，增强体质。</string>
	<string name="zhichuangText0">痔疮是人体直肠末端粘膜下和肛管皮肤下静脉丛发生扩张和屈曲所形成的柔软静脉团,多见于经常站立者和久坐者。</string>
	<string name="zhichuangText1">1. 加强锻炼：经常参加多种体育活动如广播体操、太极拳、气功、踢毽子等，能够增强机体的抗病能力，减少疾病发生的可能,对于痔疮也有一定的预防作用。这是因为体育锻炼有益于血液循环，</string>
	<string name="zhichuangText2">2. 预防便秘：正常人每日大便1次，大便时间有早、中、晚饭后的不同习惯</string>
	<string name="zhichuangText3">3. 保持肛门周围清洁：肛门、直肠、乙状结肠是贮存和排泄粪便的地方，粪便中含有许多细菌，肛门周围很容易受到这些细菌的污染，诱发肛门周围汗腺、皮脂腺感染，而生疮疖、脓肿</string>
	<string name="lijiText0">痢疾临床表现为腹痛、腹泻、里急后重、排脓血便，伴全身中毒等症状。婴儿对感染反应不强，起病较缓，大便最初多呈消化不良样稀便，病程易迁延。3岁以上患儿起病急，以发热、腹泻、腹痛为主要症状，可发生惊厥、呕吐。志贺氏或福氏菌感染者病情较重，易出现中毒型痢疾，多见于3～7岁儿童。人工喂养儿体质较弱，易出现并发症。</string>
	<string name="lijiText1">1. 搞好环境卫生，加强厕所及粪便管理，消灭苍蝇滋生地，发动群众消灭苍蝇。加强饮食卫生及水源管理，尤其对个体及饮食摊贩做好卫生监督检查工作。</string>
	<string name="lijiText2">2. 对集体单位及托幼机构的炊事员、保育员应定期检查大便，做细菌培养。</string>
	<string name="lijiText3">3. 加强卫生教育，人人做到饭前便后洗手，不饮生水，不吃变质和腐烂食物，不吃被苍蝇沾过的食物。不要暴饮暴食，以免胃肠道抵抗力降低。</string>
	<string name="cuochuangText0">痤疮是毛囊皮脂腺单位的一种慢性炎症性皮肤病，主要好发于青少年，对青少年的心理和社交影响很大，但青春期后往往能自然减轻或痊愈。临床表现以好发于面部的粉刺、丘疹、脓疱、结节等多形性皮损为特点。</string>
	<string name="cuochuangText1">1. 它的预防措施主要在于疤痕形成前、形成间尚未成熟阶段，主要目的是尽量去除各种造成疤痕增生的因素，减少疤痕的生长</string>
	<string name="cuochuangText2">2. 青春痘痊愈后，一般会留下深色的斑点，这些斑点跟青春痘一样难看。因为长青春痘的时候，病菌会刺激青春痘附近的色素细胞，所以青春痘痊愈后会留下深色的斑点，这种反应叫炎症色素沉积症</string>
	<string name="cuochuangText3">3. 平时注意防止创伤、烧烫伤、打耳孔、纹眉线等以免损伤真皮，特别是免役功能差的部位，如胸前，肩背等处</string>
	<string name="jiaoqiText0">脚气是一种极常见的真菌感染性皮肤病,成人中70-80%的人有脚气，只是轻重不同而已。常在夏季加重,冬季减轻，也有人终年不愈。</string>
	<string name="jiaoqiText1">1. 要保持脚的清洁干燥，汗脚要治疗。勤换鞋袜，趾缝紧密的人可用草纸夹在中间，以吸水通气。鞋子要通气良好,.不要用别人的拖鞋、浴巾、擦布等，不要在澡堂、游泳池旁的污水中行走</string>
	<string name="jiaoqiText2">2. 公用澡堂、游泳池要做到污水经常处理，用漂白粉或氯亚明消毒，要形成制度，以防相互传染脚气。 平时更要注意清洁鞋袜，还要特别注意的是，鞋柜也要经常通风、晾晒;如果鞋柜不能移动，应定期用消毒液擦洗或是放入干燥剂，祛除潮气。 </string>
	<string name="jiaoqiText3">3. 要坚持用药，足癣是一种慢性感染，真菌寄生角质层中生长繁殖。需长期用药才能杀死它。 </string>
	<string name="baidianfengText0">白癜风（Vitiligo）是一获得性,局限性或泛发性皮肤色素脱失症，是一影响美容的常见皮肤病。易诊断而治疗难,祖国医学称之为“白癜”或“白驳风”。</string>
	<string name="baidianfengText1">1. 少吃辛辣刺激性食物如酒、辣椒、生蒜、羊肉、鱼虾等海产品，富含维生素C的水果也要少吃，可以多吃花生、黑芝麻、黑豆、核桃、豆制品及动物肝脏等对病情有好处</string>
	<string name="baidianfengText2">2. 患者应多吃含铜，锌，铁等金属元素较多的食品，使酪氨酸酶活性增强，继而使黑色素合成加快。</string>
	<string name="baidianfengText3">3. 平时多吃一些含有酪氨酸及矿物质的食物，肉（牛，兔，猪瘦肉），动物肝脏，蛋（鸡蛋，鸭蛋，鹌鹑蛋），奶（牛奶，酸奶），菜（新鲜蔬菜，以及萝卜，茄子，冬笋，木耳，海带等）豆（黄豆，豌豆，绿豆，豆制品），花生，黑芝麻，核桃，葡萄干，螺，蛤等贝壳类食物。</string>
	<string name="niupixuanText0">银屑病俗称“牛皮癣”,是一种常见的易于复发的慢性炎症性皮肤病，特征性损害为红色丘疹或斑块上覆有多层银白色鳞屑。青壮年发病最多,男性发病多于女性，北方多于南方，春冬季易发或加重,夏秋季多缓解。</string>
	<string name="niupixuanText1">1. 预防感染：局部感染灶是诱发银屑病的一个重要原因，尤其是感冒后，并发扁桃体炎、气管炎，需要积极治疗，尽量缩短病程，扁桃体反复发炎， </string>
	<string name="niupixuanText2">2. 过敏因素：是银屑病的重要诱发原因之一。由于饮食或服用药物，或接触某种物质而过敏，常可诱发银屑病的发生。今后应尽量避免接触</string>
	<string name="niupixuanText3">3. 受潮着凉：受风寒侵袭而诱发银屑病的为数较多，由于居住环境潮湿、天气寒冷，可使本病发生或加重，因此患者应尽量避免大冷大热刺激皮肤，住室保持通风干燥。 </string>
	<string name="about_app_1">☆  本软件旨在打通医患之间的线上线下，一款在线医疗软件，试图打通医患之间的线上线下，也集成地图定位搜索，指导健康用药，生活小贴士，摇一摇等功能，旨在关注人们的健康，提高用户生活质量。</string>
    <string name="about_app_2">☆ 本软件主要推荐给医生和患者，普通人员也可以作为健康助手使用。</string>
	<string name="about_app_4">☆ 药品搜索和小知识标签卡让你了解更多的健康知识</string>
	<string name="about_app_6">☆用户注册登陆(可注册账号和修改信息，多个功能需登陆后才能使用)。</string>
	<string name="about_app_7">☆扫一扫、摇一摇(当下流行的扫一扫和摇一摇功能，会有意外惊喜哦)。</string>
	<string name="about_app_8">☆  第三方分享功能，链接个人网站查看药品详情，独乐乐不如众乐乐(可以把信息分享到新浪微博、腾讯微博、QQ空间等)。</string>
	<string name="about_author_2">☆ 作者：许尚飞，孟德全，赵忠全</string>
</resources>