<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@android:id/tabhost"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:layout_weight="1"
 >
 
<LinearLayout
 		android:layout_width="match_parent"
		android:layout_height="match_parent"
 		android:orientation="vertical" >
 
	<TabWidget
		 android:id="@android:id/tabs"
 		 android:layout_width="match_parent"
 		 android:layout_height="wrap_content" />
 
	<FrameLayout
		 android:id="@android:id/tabcontent"
 		 android:layout_width="match_parent"
 		 android:layout_height="match_parent" >
 		<ScrollView  
 		    android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="#9BCD9B"> 
 		<LinearLayout
		 android:id="@+id/tab01"
		 android:orientation="vertical"
		 android:layout_width="match_parent"
		 android:layout_height="match_parent"
		 android:background="#9BCD9B" >
 		<TextView 
  		 android:text="@string/Title1"
  		 android:textSize = "25sp"
  		 android:textColor = "#68228B"
  		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:layout_marginTop="7dip"
        android:layout_marginBottom="7dip"/>
 		<TextView
 		 android:text="@string/guzhishusongText0"
 		 android:textSize = "18sp"
  		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"/>
 		
 		<TextView 
  		 android:text="@string/Title2"
  		 android:textSize = "25sp"
  		 android:textColor = "#68228B"
  		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:layout_marginTop="15dip"
         android:layout_marginBottom="7dip"/>
 		<TextView 
  		 android:text="@string/guzhishusongText1"
  		 android:textSize = "18sp"
  		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"/>
 		<TextView 
  		 android:text="@string/guzhishusongText2"
  		 android:textSize = "18sp"
  		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"/>
 		<TextView 
  		 android:text="@string/guzhishusongText3"
  		 android:textSize = "18sp"
  		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"/>
		</LinearLayout>
</ScrollView>
	  <LinearLayout
 		android:id="@+id/tab02"
 		android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	     >
 		<ListView
	    android:id="@+id/lv_guzhishusong_items"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:divider="#9BCD9B"
	    android:dividerHeight="2dp"
	    android:headerDividersEnabled="true" >	    
		</ListView>
 	
		</LinearLayout>
	</FrameLayout>
  </LinearLayout>
</TabHost>
