<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android = "http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	 >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
    
    <TextView
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:text="一.关于软件"
		android:textSize="20sp"
		android:gravity="center_horizontal"
		android:layout_marginTop="15dp" >  
    </TextView>      
    
   <LinearLayout   
       	android:layout_width="fill_parent"   
        android:layout_height="wrap_content"     
        android:layout_marginLeft="20dp"   
        android:layout_marginRight="20dp"   
        android:layout_marginTop="15dp" 
        android:orientation="vertical" >  
        

        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_app_1"   
            android:textSize="17sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_app_2"   
            android:textSize="17sp"
            android:paddingTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
        
        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_app_4"   
            android:textSize="17sp"
            android:paddingTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
        
        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_app_6"   
            android:textSize="17sp"
            android:paddingTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
        
        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_app_7"   
            android:textSize="17sp"
            android:paddingTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />
        
        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_app_8"   
            android:textSize="17sp"
            android:paddingTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        
     
    </LinearLayout>
        
    <TextView
        android:id="@+id/register_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:text="二.关于作者"
		android:textSize="20sp"
		android:gravity="center_horizontal"
		android:layout_marginTop="15dp">  
    </TextView>
    
    <LinearLayout   
        android:layout_width="fill_parent"   
        android:layout_height="wrap_content"   
        android:layout_marginBottom="5dp"   
        android:layout_marginLeft="20dp"   
        android:layout_marginRight="20dp"   
        android:orientation="vertical" >          
        
        <TextView       
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"   
           	android:text="@string/about_author_2"     
            android:textSize="15sp"
            android:paddingTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />/>

    </LinearLayout>

</LinearLayout>
</ScrollView>
